# guiin

./: CMakeLists.txt  GUI.cpp  GUI.hpp  data1triangle.txt  input.cpp  input.hpp  main.cpp
glad/include/glad/: glad.h
glad/src/: glad.c
